[package]
name = "ledger-map"
version = "0.4.2"
edition = "2021"
description = "A Rust-based key-value map, for append-only data storage. Data integrity is protected with SHA-256 checksums, and cross-compiles to wasm32 for smart contract applications."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/decent-cloud/ledger-map"
readme = "README.md"
homepage = "https://github.com/decent-cloud/ledger-map"
repository = "https://github.com/decent-cloud/ledger-map"

[lib]
name = "ledger_map"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.95", features = ["std"] }
ahash = { version = "0.8.11", default-features = false, features = [
    "compile-time-rng",
] }
async-stream = { version = "0.3.6", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
borsh = { version = "1.5.5", features = ["derive"] }
flate2 = { version = "1.0", features = [
    "rust_backend",
], default-features = false }
futures = { version = "0.3.31", default-features = false }
hex = "0.4.3"
indexmap = { version = "2.7.1", features = ["std"] }
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.43", default-features = false, features = [
    "macros",
    "rt",
    "test-util",
] }

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
clap = "4.5.28"
fs-err = "3.1.0"
log = "0.4.25"
dirs = "6.0"
env_logger = "0.11.6"
tokio = { version = "1.43", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
js-sys = { version = "0.3.77", optional = true }
web-sys = { version = "0.3.77", features = [
    "Storage",
    "Window",
    "console",
], optional = true }
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
], optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
wasm-bindgen-test = { version = "0.3", optional = true }
ic-cdk = { version = "0.17.1", optional = true }
ic-cdk-timers = { version = "0.11.0", optional = true }
ic-canister-log = { version = "0.2.0", optional = true }

[features]
default = []
browser = [
    "js-sys",
    "getrandom",
    "wasm-bindgen",
    "wasm-bindgen-test",
    "wasm-bindgen-futures",
    "web-sys",
]
ic = ["ic-cdk", "ic-cdk-timers", "ic-canister-log"]

[dev-dependencies]
tempfile = "3.16.0"
tokio = { version = "1.43", default-features = false, features = [
    "macros",
    "rt",
    "test-util",
] }
